# 24-7Propads

./: .gitignore  README.md  pyproject.toml
247-htmlpages/24-7Propads/: add_property.html  contact_us.html  disqus_comment.html  edit_faq.html  faq.html  index.html  properties.html  type.html  users.html
247-htmlpages/24_7_Propads/: Privacy Policy.html  Terms & Conditions.html  about.html  contact.html  detail-1.html  detail-rightside.html  faq.html  index.html  listing-rightfilter.html
247-htmlpages/24_7_Propads/.sass-cache/01526bb22c7666d84be9712e3f8b137c7a33ae43/: _default.scssc  _variable.scssc
247-htmlpages/24_7_Propads/js/: main.js
247-htmlpages/24_7_Propads/scss/: style.css
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
advertisement/: admin.py  forms.py  models.py  urls.py  views.py
analytic/: admin.py  models.py  views.py
core/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
project/: context_processors.py  settings.py  urls.py
project/templates/admin/: base.html  login.html  logout.html
project/templates/customer/: base.html
project/templates/customer/pages/: faq.html  (+9 more)
property/: admin.py  constant.py  forms.py  models.py  urls.py  utils.py  views.py
property/fixtures/: property_attributes.json
property/templatetags/: property_extras.py
review/: admin.py  forms.py  models.py  urls.py  views.py
static/customer/css/: dashboard.css
static/customer/fonts/: ionicons28b528b5.eot  line-icons.css
static/customer/js/: main.js
subscription/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
(+86 files in other folders)
